[gd_scene load_steps=10 format=3 uid="uid://b8kvcuy64rf4"]

[ext_resource type="Script" path="res://UI/Main.gd" id="1_sxfkf"]
[ext_resource type="Texture2D" uid="uid://bm6h2jevngfc2" path="res://art/UI/bg.jpg" id="2_ax3w6"]
[ext_resource type="FontFile" uid="uid://brxyk3yvewsvc" path="res://art/font1.ttf" id="2_u0wmk"]
[ext_resource type="Texture2D" uid="uid://cyv6vdxk1g0vt" path="res://art/UI/skillGap.png" id="3_2pg3l"]
[ext_resource type="Texture2D" uid="uid://dd4ontpp7gowu" path="res://art/UI/btn0.png" id="3_bdjdi"]
[ext_resource type="Texture2D" uid="uid://dbe0emj0ishba" path="res://art/UI/btn1.png" id="4_7d1nc"]
[ext_resource type="AudioStream" uid="uid://ddf1ft02lscru" path="res://art/Sounds/buttonPressed.wav" id="7_kgyo5"]
[ext_resource type="AudioStream" uid="uid://blwgash7dkwka" path="res://art/Sounds/buttonScrolling.wav" id="8_wxmfx"]
[ext_resource type="AudioStream" uid="uid://bausg3ae5lgs" path="res://art/Sounds/mainScreen.mp3" id="9_ck7l1"]

[node name="MainUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxfkf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 1.0
offset_right = 1359.0
offset_bottom = 806.0
scale = Vector2(0.85, 0.85)
texture = ExtResource("2_ax3w6")

[node name="AudioBTN" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 961.0
offset_top = 34.0
offset_right = 1293.0
offset_bottom = 351.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_bdjdi")

[node name="ShopBTN" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1056.0
offset_top = 35.0
offset_right = 1388.0
offset_bottom = 366.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_7d1nc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = -7.0
offset_right = 594.0
offset_bottom = 111.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0.862745, 0.219608, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_u0wmk")
theme_override_font_sizes/font_size = 128
text = "Ruspa!"

[node name="SkillGap" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 199.0
offset_right = 837.0
offset_bottom = 409.0
texture = ExtResource("3_2pg3l")

[node name="Label" type="Label" parent="SkillGap"]
layout_mode = 0
offset_left = 184.0
offset_top = 63.0
offset_right = 324.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("2_u0wmk")
theme_override_font_sizes/font_size = 64
text = "Gioca"
horizontal_alignment = 1

[node name="SkillGap2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 314.0
offset_top = 363.0
offset_right = 842.0
offset_bottom = 573.0
texture = ExtResource("3_2pg3l")

[node name="Label" type="Label" parent="SkillGap2"]
layout_mode = 0
offset_left = 184.0
offset_top = 63.0
offset_right = 324.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("2_u0wmk")
theme_override_font_sizes/font_size = 64
text = "Esci"
horizontal_alignment = 1

[node name="Pressed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_kgyo5")

[node name="Selected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_wxmfx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ck7l1")
autoplay = true

[node name="Animator" type="Timer" parent="."]
autostart = true

[node name="Record" type="Label" parent="."]
layout_mode = 0
offset_left = 373.0
offset_top = 562.0
offset_right = 773.0
offset_bottom = 592.0
theme_override_fonts/font = ExtResource("2_u0wmk")
theme_override_font_sizes/font_size = 32
text = "Record"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="AudioBTN" to="." method="_on_audio_btn_mouse_entered"]
[connection signal="mouse_exited" from="AudioBTN" to="." method="_on_audio_btn_mouse_exited"]
[connection signal="mouse_entered" from="ShopBTN" to="." method="_on_shop_btn_mouse_entered"]
[connection signal="mouse_exited" from="ShopBTN" to="." method="_on_shop_btn_mouse_exited"]
[connection signal="mouse_entered" from="SkillGap" to="." method="_on_skill_gap_mouse_entered"]
[connection signal="mouse_exited" from="SkillGap" to="." method="_on_skill_gap_mouse_exited"]
[connection signal="mouse_entered" from="SkillGap2" to="." method="_on_skill_gap_2_mouse_entered"]
[connection signal="mouse_exited" from="SkillGap2" to="." method="_on_skill_gap_2_mouse_exited"]
[connection signal="timeout" from="Animator" to="." method="_on_animator_timeout"]
